--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -4,11 +4,12 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "express": "^4.17.1",
         "peerjs": "^1.1.0",
         "simple-peer": "^9.6.2",
         "socket.io": "^2.3.0",
