--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "multer": "^1.4.2",
         "peerjs": "^1.1.0",
         "simple-peer": "^9.6.2",
         "socket.io": "^2.3.0",
